# kompress-cache

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  ruff.toml  test.py
kompress_cache/: __init__.py  cache.py  config.py  decorators.py
